change file name to index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Cookie Click</title>
+<title>Cookie Click Class Version</title>
 </head>
 <body>
 <script language="JavaScript">
